syntax = "proto3";

option go_package = "github.com/zuczkows/room-chat";

package room_chat;

service RoomChat{
    rpc RegisterProfile (RegisterProfileRequest) returns (RegisterProfileResponse);
    rpc UpdateProfile (UpdateProfileRequest) returns (Empty);
}

message Empty {}

message RegisterProfileRequest {
    string username  = 1;
    string password  = 2;
    string nick  = 3;
}

message RegisterProfileResponse {
    int64 id = 1;
}

message UpdateProfileRequest {
    string nick = 1;

}
